delay starting and showing content and animation, avoid flickering

--- a/project/src/boot/styles.css
+++ b/project/src/boot/styles.css
@@ -28,6 +28,9 @@ body {
     background-image: linear-gradient(-44deg, #514A9D 0%, #24C6DC 100%);
     background-repeat: no-repeat;
 }
+#before-init {
+    display: none; 
+}
 
 .header {
     font-family: 'alex_brushregular';
@@ -40,7 +43,6 @@ p {
 }
 p.info{
     opacity:0;
-    padding: 10px 20px;
     font-size: 22px;
     padding: 10px 20px 0 20px;
 }
@@ -49,24 +51,29 @@ p.info.fadeIn {
     opacity: 1;
 }
 
-.refresh {
-    margin-top: 30px;
-    text-align: center;
-}
-.refresh a {
+a {
     color: black;
 }
-.refresh a:hover {
+a:hover {
     color: white;
+}
+
+.refresh {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.hidden {
+    display: none;
 }
 
 dt {
     float: left;
     font-weight: bold;
-    border-bottom: 1px solid rgb(255, 255, 255);
+    border-bottom: 1px solid white;
 }
 dd {
     text-align: right;
-    border-bottom: 1px solid rgb(255, 255, 255);
+    border-bottom: 1px solid white;
     margin:0;
 }
